# CppFeaturePlayground

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: test.yml
CppFeaturePlayground/: .SmartList.h.swp  CMakeLists.txt  CppFeaturePlayground.cpp  CppFeaturePlayground.h  SmartList.h
CppFeaturePlayground/lib/: CMakeLists.txt  SmartList.h
CppFeaturePlayground/src/: CppFeaturePlayground.cpp
CppFeaturePlayground/test/: SmartListTest.cc
Testing/: TAG
